# amos-tub-ws18-proj1

./: .codacy.yaml  .gitignore  .travis.yml  LICENSE  README.md  android_things_kill_launcher.sh  before_operations.sh  build_operations.sh  create_vm_network.sh  flyinn-keystore.jks.enc  keystore.jks.enc  meson.build  settings.gradle  update-build-info.sh  update_fakeinput_jar_asset.sh
FlyInnClient/app/: build.gradle
FlyInnServer/app/: build.gradle
app/: CMakeLists.txt  build.gradle  lint-report.html
doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-3.html  index-4.html  index-5.html  (+4 more)
docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
fakeinputlib/: build.gradle  meson.build
fakeinputlib/scripts/: build-wrapper.sh
fakeinputlib/src/main/: AndroidManifest.xml
fakeinputlib/src/main/java/com/amos/fakeinputlib/: FakeInput.java  FakeInputReceiver.java  Main.java
server/: CMakeLists.txt  build.gradle  lint-report.html
shared/: build.gradle
testandroidthings/: build.gradle
uml diagrams/: Amos.asta
(+441 files in other folders)
